# amature_fs

./: .gitignore  README.md  pyproject.toml
amature_fs/: exceptions.py  models.py  store.py  utils.py
amature_fs/tickers/: __init__.py  _datetime.py  _ticker.py  _timestamp.py  _uuid7.py
tests/test_catalog/: test_src.py
tests/test_tickers/: test_tickers.py
